      on 0.2.2.17-alpha.

  o Minor features:
    - Make hidden services work better in private Tor networks by not
      requiring any uptime to join the hidden service descriptor
      DHT. Implements ticket 2088.
    - Rate-limit the "your application is giving Tor only an IP address"
      warning. Addresses bug 2000; bugfix on 0.0.8pre2.
    - Update to the November 1 2010 Maxmind GeoLite Country database.

  o Code simplifications and refactoring:
    - When we fixed bug 1038 we had to put in a restriction not to send
      RELAY_EARLY cells for relay cells on rend circuits. This was
      necessary as long as relays using Tor 0.2.1.3-alpha through
      0.2.1.18-alpha were active. Since this isn't the case anymore,
      we unify our behaviour here. Resolves bug 2081.
    - Some options used different conventions for uppercasing of acronyms
      when comparing manpage and source. Fix those in favor of the
      manpage, as it makes sense to capitalize acronyms.
    - Remove the torrc.complete file. It hasn't been kept up to date
      and users will have better luck checking out the manpage.
    - Removed the obsolete "NoPublish" option; it has been flagged
      as obsolete and has produced a warning since 0.1.1.18-rc.
    - Remove everything related to building the expert bundle for OS X.
      It has confused many users, doesn't work right on OS X 10.6,
      and is hard to get rid of once installed. Resolves bug 1274.


Changes in version 0.2.2.17-alpha - 2010-09-30
  Tor 0.2.2.17-alpha introduces a feature to make it harder for clients
  to use one-hop circuits (which can put the exit relays at higher risk,
  plus unbalance the network); fixes a big bug in bandwidth accounting
  for relays that want to limit their monthly bandwidth use; fixes a
  big pile of bugs in how clients tolerate temporary network failure;
  and makes our adaptive circuit build timeout feature (which improves
  client performance if your network is fast while not breaking things